criando section produtos favoritos

--- a/projeto-ecommerce/index.html
+++ b/projeto-ecommerce/index.html
@@ -50,7 +50,7 @@
         </div>
 
         <div class="lista-produtos">
-            <ul>
+            <ul class="menu">
                 <li><a href="#">Cabelo</a></li>
                 <li><a href="#">Maquiagem</a></li>
                 <li><a href="#">Skincare</a></li>
@@ -68,7 +68,7 @@
 </nav>
 
 <main class="main">
-    <section class="content">
+    <section class="carrosel">
         <div class="slides">
             <input type="radio" name="slide" id="slide1" checked>
             <input type="radio" name="slide" id="slide2">
@@ -91,6 +91,40 @@
             <label class="bar" for="slide3"></label>
         </div>
     </section>
+    <section class="produtos-destaque">
+        <h1 class="produtos-destaque-titulo">Produtos em destaque</h1>
+        <div class="produtos-container">
+            <div class="produto">
+                <img src="/projeto-ecommerce/imagens/lipstick-2726989_640.jpg" alt="foto de um batom" class="produtos-destaque-imagens">
+                <span class="produtos-destaque-texto">Vult</span>
+                <a href="#" class="produtos-descricao">Batom vermelho 20g</a>
+                <img src="/projeto-ecommerce/imagens/mask_5_stars_sm.svg" alt="cinco estrelas" class="estrelas">
+                <span class="preco-maximo">R$153,90</span>
+                <span class="preco-minimo">R$93,20</span>
+                <button class="btn"><a href="#">Comprar agora</a></button>
+            </div>
+            <div class="produto">
+                <img src="/projeto-ecommerce/imagens/lipstick-2726989_640.jpg" alt="foto de um batom" class="produtos-destaque-imagens">
+                <span class="produtos-destaque-texto">Vult</span>
+                <a href="#" class="produtos-descricao">Batom vermelho 20g</a>
+                <img src="/projeto-ecommerce/imagens/mask_5_stars_sm.svg" alt="cinco estrelas" class="estrelas">
+                <span class="preco-maximo">R$153,90</span>
+                <span class="preco-minimo">R$93,20</span>
+                <button class="btn"><a href="#">Comprar agora</a></button>
+            </div>
+            <div class="produto">
+                <img src="/projeto-ecommerce/imagens/lipstick-2726989_640.jpg" alt="foto de um batom" class="produtos-destaque-imagens">
+                <span class="produtos-destaque-texto">Vult</span>
+                <a class="produtos-descricao" href="#">Batom vermelho 20g</a>
+                <img src="/projeto-ecommerce/imagens/mask_5_stars_sm.svg" alt="cinco estrelas" class="estrelas">
+                <span class="preco-maximo">R$153,90</span>
+                <span class="preco-minimo">R$93,20</span>
+                <button class="btn"><a href="#">Comprar agora</a></button>
+            </div>
+        </div>
+
+    </section>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Labore obcaecati adipisci nisi laudantium, quo aperiam corrupti doloremque totam autem maxime accusantium laboriosam fugit tenetur vitae beatae? Nam fuga deserunt commodi.</p>
 </main>
 
 <body>
