conclusao projeto ecommerce versao desktop

--- a/projeto-ecommerce/index.html
+++ b/projeto-ecommerce/index.html
@@ -5,130 +5,158 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/projeto-ecommerce/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Maria Bonita Cosméticos</title>
 </head>
-<nav>
-    <div class="nav-infos">
-        <div class=" infos">
-            <img src="/projeto-ecommerce/imagens/car-solid.svg" alt="logo do carro " class="icone">
-            <div class=" nav-paragrafos">
-                <p><strong>Entrega grátis</strong></p>
-                <p>Compras acima de R$99</p>
-            </div>
-
-        </div>
-
-        <div class=" infos">
-            <img src="/projeto-ecommerce/imagens/clock-solid.svg" alt="logo de relógio" class="icone">
-            <div class="nav-paragrafos">
-                <p><strong>Tempo de entrega</strong></p>
-                <p>De 2 a 5 dias</p>
-            </div>
-
-        </div>
-
-        <div class="infos">
-            <img src="/projeto-ecommerce/imagens/folder-solid.svg" alt="logo de uma pasta" class="icone">
-            <div class="nav-paragrafos">
-                <p><strong>Políticas de devolução</strong></p>
-                <p>Saiba sobre nossa política de devolução</p>
-            </div>
-
-        </div>
-
-    </div>
-
-    <div class="nav-principal">
-        <div class="caixa-pesquisa">
-            <img src="/projeto-ecommerce/imagens/logo_mari_a_bonita.svg" alt="Logo mari a bonita" class="logo">
-            <input type="search" placeholder="O que você procura hoje?" class="input-pesquisa">
-            <img src="/projeto-ecommerce/imagens/magnifying-glass-solid.svg" alt="lupa de pesquisa" id="icone-lupa">
-            <img src="/projeto-ecommerce/imagens/heart-regular.svg" alt="Favoritos" style="width: 32px;">
-            <img src="/projeto-ecommerce/imagens/cart-shopping-solid.svg" alt="Carrinho de compras" style="width: 32px;">
-
-        </div>
-
-        <div class="lista-produtos">
-            <ul class="menu">
-                <li><a href="#">Cabelo</a></li>
-                <li><a href="#">Maquiagem</a></li>
-                <li><a href="#">Skincare</a></li>
-                <li><a href="#">Perfumaria</a></li>
-                <li><a href="#">Cuidados Pessoais</a></li>
-
-
-            </ul>
-        </div>
-
-    </div>
-
-
-
-</nav>
-
-<main class="main">
-    <section class="carrosel">
-        <div class="slides">
-            <input type="radio" name="slide" id="slide1" checked>
-            <input type="radio" name="slide" id="slide2">
-            <input type="radio" name="slide" id="slide3">
-
-            <div class="slide s1">
-                <img src="/projeto-ecommerce/imagens/produto-1.jpg" alt="vários esmaltes" class="imagem-carrosel">
-            </div>
-            <div class="slide">
-                <img src="/projeto-ecommerce/imagens/pink-hair-1450045_1280.jpg" alt="mulher com cabelo rosa">
-            </div>
-            <div class="slide">
-                <img src="/projeto-ecommerce/imagens/cosmetics-1543276_1280.jpg" alt="várias maquiagens">
-            </div>
-        </div>
-
-        <div class="navigation">
-            <label class="bar" for="slide1"></label>
-            <label class="bar" for="slide2"></label>
-            <label class="bar" for="slide3"></label>
-        </div>
-    </section>
-    <section class="produtos-destaque">
-        <h1 class="produtos-destaque-titulo">Produtos em destaque</h1>
-        <div class="produtos-container">
-            <div class="produto">
-                <img src="/projeto-ecommerce/imagens/lipstick-2726989_640.jpg" alt="foto de um batom" class="produtos-destaque-imagens">
-                <span class="produtos-destaque-texto">Vult</span>
-                <a href="#" class="produtos-descricao">Batom vermelho 20g</a>
-                <img src="/projeto-ecommerce/imagens/mask_5_stars_sm.svg" alt="cinco estrelas" class="estrelas">
-                <span class="preco-maximo">R$153,90</span>
-                <span class="preco-minimo">R$93,20</span>
-                <button class="btn"><a href="#">Comprar agora</a></button>
-            </div>
-            <div class="produto">
-                <img src="/projeto-ecommerce/imagens/lipstick-2726989_640.jpg" alt="foto de um batom" class="produtos-destaque-imagens">
-                <span class="produtos-destaque-texto">Vult</span>
-                <a href="#" class="produtos-descricao">Batom vermelho 20g</a>
-                <img src="/projeto-ecommerce/imagens/mask_5_stars_sm.svg" alt="cinco estrelas" class="estrelas">
-                <span class="preco-maximo">R$153,90</span>
-                <span class="preco-minimo">R$93,20</span>
-                <button class="btn"><a href="#">Comprar agora</a></button>
-            </div>
-            <div class="produto">
-                <img src="/projeto-ecommerce/imagens/lipstick-2726989_640.jpg" alt="foto de um batom" class="produtos-destaque-imagens">
-                <span class="produtos-destaque-texto">Vult</span>
-                <a class="produtos-descricao" href="#">Batom vermelho 20g</a>
-                <img src="/projeto-ecommerce/imagens/mask_5_stars_sm.svg" alt="cinco estrelas" class="estrelas">
-                <span class="preco-maximo">R$153,90</span>
-                <span class="preco-minimo">R$93,20</span>
-                <button class="btn"><a href="#">Comprar agora</a></button>
-            </div>
-        </div>
-
-    </section>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Labore obcaecati adipisci nisi laudantium, quo aperiam corrupti doloremque totam autem maxime accusantium laboriosam fugit tenetur vitae beatae? Nam fuga deserunt commodi.</p>
-</main>
 
 <body>
+    <nav>
+        <div class="nav-infos">
+            <div class=" infos">
+                <img src="imagens/car-solid.svg" alt="logo do carro " class="icone">
+                <div class=" nav-paragrafos">
+                    <p><strong>Entrega grátis</strong></p>
+                    <p>Compras acima de R$99</p>
+                </div>
 
+            </div>
+
+            <div class=" infos">
+                <img src="imagens/clock-solid.svg" alt="logo de relógio" class="icone">
+                <div class="nav-paragrafos">
+                    <p><strong>Tempo de entrega</strong></p>
+                    <p>De 2 a 5 dias</p>
+                </div>
+
+            </div>
+
+            <div class="infos">
+                <img src="imagens/folder-solid.svg" alt="logo de uma pasta" class="icone">
+                <div class="nav-paragrafos">
+                    <p><strong>Políticas de devolução</strong></p>
+                    <p>Saiba sobre nossa política de devolução</p>
+                </div>
+
+            </div>
+
+        </div>
+
+        <div class="nav-principal">
+            <div class="caixa-pesquisa">
+                <img src="imagens/logo_mari_a_bonita.svg" alt="Logo mari a bonita" class="logo">
+                <input type="search" placeholder="O que você procura hoje?" class="input-pesquisa">
+                <img src="imagens/magnifying-glass-solid.svg" alt="lupa de pesquisa" id="icone-lupa">
+                <img src="imagens/heart-regular.svg" alt="Favoritos" style="width: 32px;">
+                <img src="imagens/cart-shopping-solid.svg" alt="Carrinho de compras" style="width: 32px;">
+
+            </div>
+
+            <div class="lista-produtos">
+                <ul class="menu">
+                    <li><a href="#">Cabelo</a></li>
+                    <li><a href="#">Maquiagem</a></li>
+                    <li><a href="#">Skincare</a></li>
+                    <li><a href="#">Perfumaria</a></li>
+                    <li><a href="#">Cuidados Pessoais</a></li>
+
+
+                </ul>
+            </div>
+
+        </div>
+
+
+
+    </nav>
+
+    <main class="main">
+        <section class="carrosel">
+            <div class="slides">
+                <input type="radio" name="slide" id="slide1" checked>
+                <input type="radio" name="slide" id="slide2">
+                <input type="radio" name="slide" id="slide3">
+
+                <div class="slide s1">
+                    <img src="imagens/produto-1.jpg" alt="vários esmaltes" class="imagem-carrosel">
+                </div>
+                <div class="slide">
+                    <img src="imagens/pink-hair-1450045_1280.jpg" alt="mulher com cabelo rosa">
+                </div>
+                <div class="slide">
+                    <img src="imagens/cosmetics-1543276_1280.jpg" alt="várias maquiagens">
+                </div>
+            </div>
+
+            <div class="navigation">
+                <label class="bar" for="slide1"></label>
+                <label class="bar" for="slide2"></label>
+                <label class="bar" for="slide3"></label>
+            </div>
+        </section>
+        <section class="produtos-destaque">
+            <h1 class="produtos-destaque-titulo">Produtos em destaque</h1>
+            <div class="produtos-container">
+                <div class="produto">
+                    <img src="imagens/lipstick-2726989_640.jpg" alt="foto de um batom" class="produtos-destaque-imagens">
+                    <span class="produtos-destaque-texto">Vult</span>
+                    <a href="#" class="produtos-descricao">Batom vermelho 20g</a>
+                    <img src="imagens/mask_5_stars_sm.svg" alt="cinco estrelas" class="estrelas">
+                    <span class="preco-maximo">R$50,90</span>
+                    <span class="preco-minimo">R$25,20</span>
+                    <button class="btn"><a href="#">Comprar agora</a></button>
+                </div>
+                <div class="produto">
+                    <img src="imagens/eyeshadow.jpg" alt="foto de uma sombra maquiagem" class="produtos-destaque-imagens">
+                    <span class="produtos-destaque-texto">MAC</span>
+                    <a href="#" class="produtos-descricao">Sombra 4 cores</a>
+                    <img src="imagens/mask_5_stars_sm.svg" alt="cinco estrelas" class="estrelas">
+                    <span class="preco-maximo">R$153,90</span>
+                    <span class="preco-minimo">R$93,20</span>
+                    <button class="btn"><a href="#">Comprar agora</a></button>
+                </div>
+                <div class="produto">
+                    <img src="imagens/shampoo-4213395_640.jpg" alt="foto de um shampoo" class="produtos-destaque-imagens">
+                    <span class="produtos-destaque-texto">Biofresh</span>
+                    <a class="produtos-descricao" href="#">Shampoo biofresh 200ml</a>
+                    <img src="imagens/mask_5_stars_sm.svg" alt="cinco estrelas" class="estrelas">
+                    <span class="preco-maximo">R$99,90</span>
+                    <span class="preco-minimo">R$63,20</span>
+                    <button class="btn"><a href="#">Comprar agora</a></button>
+                </div>
+            </div>
+
+        </section>
+
+    </main>
+
+    <footer class="rodape">
+
+        <div class="rodape-principal">
+            <div class="horario-atendimento">
+                <h3 class="footer-titulo">Atendimento</h3>
+                <p>Horário de atendimento: Segunda a
+                    <br>
+                    sexta, das 8 às 17h
+                </p>
+
+            </div>
+
+            <div class="nossas-midias">
+                <h3>Nossas mídias</h3>
+                <a href="https://pt-br.facebook.com/"><img src="imagens/facebook (1).svg" alt="icone do facebook" class="icone-midias"> </a>
+                <a href="https://www.instagram.com/"><img src="imagens/instagram (1).svg" alt="icone do instagram" class="icone-midias"></a>
+                <a href="https://web.whatsapp.com/"><img src="imagens/whatsapp.svg" alt="icone do whatsapp" class="icone-midias"></a>
+            </div>
+        </div>
+
+
+        <div class="cartoes">
+            <img src="imagens/cc-mastercard.svg" alt="icone do cartao mastercard" class="icone-midias">
+            <img src="imagens/cc-visa.svg" alt="icone do cartao visa" class="icone-midias">
+            <img src="imagens/pix.svg" alt="icone do pix" class="icone-midias">
+        </div>
+    </footer>
 </body>
+
 
 </html>
