Ajustando posição do carrosel

--- a/projeto-ecommerce/index.html
+++ b/projeto-ecommerce/index.html
@@ -70,27 +70,29 @@
     </nav>
 
     <main class="main">
-        <section class="carrosel">
-            <div class="slides">
-                <input type="radio" name="slide" id="slide1" checked>
-                <input type="radio" name="slide" id="slide2">
-                <input type="radio" name="slide" id="slide3">
+        <section class="carrosel-container">
+            <div class="carrosel">
+                <div class="slides">
+                    <input type="radio" name="slide" id="slide1" checked>
+                    <input type="radio" name="slide" id="slide2">
+                    <input type="radio" name="slide" id="slide3">
 
-                <div class="slide s1">
-                    <img src="imagens/produto-1.jpg" alt="vários esmaltes" class="imagem-carrosel">
+                    <div class="slide s1">
+                        <img src="imagens/produto-1.jpg" alt="vários esmaltes" class="imagem-carrosel">
+                    </div>
+                    <div class="slide">
+                        <img src="imagens/pink-hair-1450045_1280.jpg" alt="mulher com cabelo rosa">
+                    </div>
+                    <div class="slide">
+                        <img src="imagens/cosmetics-1543276_1280.jpg" alt="várias maquiagens">
+                    </div>
                 </div>
-                <div class="slide">
-                    <img src="imagens/pink-hair-1450045_1280.jpg" alt="mulher com cabelo rosa">
-                </div>
-                <div class="slide">
-                    <img src="imagens/cosmetics-1543276_1280.jpg" alt="várias maquiagens">
-                </div>
-            </div>
 
-            <div class="navigation">
-                <label class="bar" for="slide1"></label>
-                <label class="bar" for="slide2"></label>
-                <label class="bar" for="slide3"></label>
+                <div class="navigation">
+                    <label class="bar" for="slide1"></label>
+                    <label class="bar" for="slide2"></label>
+                    <label class="bar" for="slide3"></label>
+                </div>
             </div>
         </section>
         <section class="produtos-destaque">
